--- a/patient/css/login.css
+++ b/patient/css/login.css
@@ -58,6 +58,9 @@
 .footer{
     margin-bottom: 80px;
     color: grey;
+     position: fixed; 
+     bottom: 0; 
+    width: 100%; 
 }
 
 .link{
@@ -66,8 +69,9 @@
     margin-left: 20px;
 }
 
-.background{
-
+.pass{
+    text-decoration: none;
+    color: rgb(23, 200, 245);
 }
 
 .opacity{
@@ -82,6 +86,21 @@
 .font{
     font-size: 40px; 
     font-weight: 600;
+}
+
+.input{
+    position: relative;
+}
+
+.icon{
+ position: absolute;
+ top: 10px;
+ right: 12px;
+ color: grey
+}
+
+.transparent{
+    background: transparent;
 }
 
 
