--- a/patient/css/family-friendReq.css
+++ b/patient/css/family-friendReq.css
@@ -106,21 +106,16 @@
     font-size: small;
 }
 
-.flag {
-    width: 10px;
-    height: 10px;
-}
-
-body {
+body{
     background-color: rgba(192, 190, 190, 0.295);
 }
 
-.box {
+.box{
     background-color: white;
     border: none;
     -moz-box-shadow: 0 0 5px rgba(182, 181, 181, 0.295);
     -webkit-box-shadow: 0 0 5px rgba(182, 181, 181, 0.295);
-    box-shadow: 0 0 20px rgba(182, 181, 181, 0.295);
+     box-shadow: 0 0 20px rgba(182, 181, 181, 0.295);
     border-radius: 10px;
     padding: 10px 20px;
 }
@@ -136,6 +131,54 @@ body {
   .iti__country-list{
     z-index: 10;
   }
+
+.pop-up{
+    /* padding: 0px 25px; */
+    transform: translate(-50%,-50%)!important;
+    left: 50%!important;
+    top: 50%!important;
+    width: 450px!important;
+    height: 400px!important;
+    display: flex!important;
+    justify-content: center!important;
+    align-items: center!important;
+    border-radius: 10px;
+}
+
+
+.title{
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.font-size{
+    font-size: 13px;
+    font-family: 'Montserrat', sans-serif;
+    margin-bottom: 10px;
+}
+
+.offcanvas-body{
+    flex-grow: 0;
+    
+}
+
+.btn7{
+    border: none;
+    background-color: rgb(14, 201, 248);
+    color: wheat;
+    width: 50px;
+    height: 40px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img2{
+    width: 80px; 
+    height: 80px;
+}
 
 
 @media only screen and (max-width:450px) {
@@ -195,8 +238,78 @@ body {
         font-size: 10px;
     }
 
-    .para {
+    .para{
         font-size: 10px;
         padding-right: 10px;
     }
+}
+
+
+@media only screen and (max-width:800px){
+    .pop-up{
+        width: 350px!important;
+        height: 300px!important;
+    }
+
+    .title{
+        font-size: 17px;
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+
+    .font-size{
+        font-size: 10px;
+        margin-bottom: 5px;
+    }
+
+    
+    .btn7{
+    width: 40px;
+    height: 30px;
+    }
+
+    
+.img2{
+    width: 60px; 
+    height: 60px;
+}
+
+.ok{
+    font-size: 12px;
+}
+}
+
+
+@media only screen and (max-width:450px){
+    .pop-up{
+        width: 200px!important;
+        height: 200px!important;
+    }
+
+    .title{
+        font-size: 13px;
+        margin-top: 5px;
+        margin-bottom: 3px;
+    }
+
+    .font-size{
+        font-size: 8px;
+        margin-bottom: 2px;
+    }
+
+    
+    .btn7{
+    width: 25px;
+    height: 20px;
+    }
+
+    
+.img2{
+    width: 35px; 
+    height: 35px;
+}
+
+.ok{
+    font-size: 8px;
+}
 }
